--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -31,6 +31,7 @@ jobs:
           mkdir -p docs
           python gen-md.py
           cp README.md ./docs/index.md
+          if [ -d asset ]; then cp -r asset ./docs/asset; fi
 
       - name: Configure git identity
         run: |
