--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: 合肥工业大学宣城校区计算机科学与技术资料汇总
 site_description: 这是合肥工业大学宣城校区计算机科学与技术资料汇总的网站
 site_author: Tuning-Luna
-theme: readthedocs
+theme: mkdocs
 repo_url: https://github.com/Tuning-Luna/HFUT_XC_Study_Things
