--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -31,7 +31,7 @@ jobs:
           mkdir -p docs
           python gen-md.py
           cp README.md ./docs/index.md
-          if [ -d asset ]; then cp -r asset ./docs/asset; fi
+          if [ -d assets ]; then cp -r assets ./docs/assets; fi
 
       - name: Configure git identity
         run: |
