--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: 合肥工业大学宣城校区计算机科学与技术资料汇总
+site_name: HFUT-XC计算机科学与技术资料汇总
 site_description: 这是合肥工业大学宣城校区计算机科学与技术资料汇总的网站
 site_author: Tuning-Luna
 theme: readthedocs
