chore：增强SEO，添加对静态资源的说明文件

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -48,5 +48,5 @@ jobs:
           mkdocs gh-deploy --force --clean --remote-name origin --remote-branch gh-pages
 
       #  清理中间产物
-      # - name: Cleanup (CI workspace only)
-      #   run: rm -rf site docs
+      - name: Cleanup (CI workspace only)
+        run: rm -rf site docs
