--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           python -m pip install -U pip
           pip install mkdocs
+          pip install mkdocs-material
 
       - name: Generate docs
         run: |
