--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,9 @@
 site_name: HFUT-XC计算机科学与技术资料汇总
 site_description: 这是合肥工业大学宣城校区计算机科学与技术资料汇总的网站
 site_author: Tuning-Luna
-theme: readthedocs
+theme: material
 repo_url: https://github.com/Tuning-Luna/HFUT_XC_Study_Things
+edit_uri: ""
 
 extra:
   meta:
